--- a/contact.html
+++ b/contact.html
@@ -188,13 +188,12 @@
 
                     </div>
                     <div class="col-sm-12">
-                        <textarea name="massage" id="msg" cols="30" rows="10"></textarea>
-
+                        <textarea name="massage" id="msg" cols="30" rows="10" required></textarea>
                     </div>
 
                 </div>
                 <div class="send-btn text-center">
-                    <a href="#" class="btn btn-primariey">Send Message</a>
+                    <input type="submit" value="Send Message" class="btn btn-primariey">
                 </div>
             </form>
         </div>
@@ -209,7 +208,8 @@
                     <div class="col-sm-6 gutter-25 col-lg-4">
                         <div class="para-cover">
                             <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum alias debitis, quibusdam minus, autem modi exercitationem optio nobis reprehenderit, aspernatur facere illo! Omnis quas iusto veritatis praesentium eligendi, repudiandae
-                                exercitationem!</p>
+                                exercitationem!
+                            </p>
                         </div>
                     </div>
                     <div class="col-sm-6 gutter-25 col-lg-2 d-flex justify-md-content-center">
