--- a/hospitaldtailpage.html
+++ b/hospitaldtailpage.html
@@ -81,7 +81,7 @@
         <div class="bannar_inner ">
             <div class="container text-center">
                 <h2 class="h2">
-                    Hasnat<span> Tanvir Hospital</span>
+                    IBN<span> SINA Hospital</span>
                 </h2>
                 <div class="mini_container text-center">
                     <p>Bangladesh Total 150 has Private hospital, Ther are sarve good service , Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus illum necessitatibus in eveniet similique, laboriosam non alias aliquam repudiandae provident,
@@ -146,9 +146,6 @@
                                 <input class="btn btn-primariey" type="submit" name="appointment" id="appointment" value="Book an Appointment">
                             </div>
                         </div>
-
-
-
                     </div>
                 </form>
             </div>
