--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
 
 
 <body class="hero-anime">
-    <div class="canvas-animation">
-        <div style="position: absolute; left: 0px; top: 0px; overflow: hidden; width: 100%; height: 100%;">
-            <canvas id="nodes"></canvas>
-        </div>
-        <!-- </nodes.js embedding> -->
-    </div>
 
+    <div style="position: absolute; left: 0px; top: 70px; overflow: hidden; width: 100%; height: 100%;">
+        <canvas id="nodes"></canvas>
+    </div>
 
 
 
@@ -91,6 +88,10 @@
 
     <!---------- start slider section ----------------->
     <section class="sliders banner-slider bg-secondry">
+        <div class="canvas-animation">
+
+            <!-- </nodes.js embedding> -->
+        </div>
         <!-- Slider main container -->
         <div class="swiper-container">
             <!-- Additional required wrapper -->
@@ -102,12 +103,13 @@
                             <div class="col-sm-12 col-md-6 ">
                                 <div class="inner-box">
                                     <div class="bannar-text">
-                                        <h1 class="h1 animate__fadeInLeft animate__animated ">
+                                        <h1 class="h1 ">
                                             CORONA VIRUS <span>COVID-19</span>
                                         </h1>
-                                        <p class="para animate__fadeInUp animate__animated ">
+                                        <p class="para ">
                                             The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
                                         </p>
+
                                         <div class="primary-btn">
                                             <a class="btn btn-primariey">Get a Hospital</a>
 
@@ -136,7 +138,7 @@
                                 <div class="inner-box">
                                     <div class="bannar-text">
                                         <h1 class="h1 animate__fadeInLeft animate__animated ">
-                                            BANGLADESH <span>COVID-19 HOSPITAL</span>
+                                            BD <span>COVID HOSPITAL</span>
                                         </h1>
                                         <p class="para animate__fadeInUp animate__animated ">
                                             Covid-19 Corona viruses(CoV)are a large family of viruses that cause illness raning from the common cold to more severe diseases such as moddile east reapiratory syndroma (MERS CoV) and severe acute respiratory(SARA-CoV).A novl coronavirus (nCoV)is a
@@ -171,7 +173,7 @@
                                 <div class="inner-box">
                                     <div class="bannar-text">
                                         <h1 class="h1 animate__fadeInLeft animate__animated">
-                                            GET ALL COVID-19 <span>EMARGENCY SERVICE</span>
+                                            COVID <span>EMARGENCY SERVICE</span>
                                         </h1>
                                         <p class="para animate__fadeInUp animate__animated">
                                             The Coronavirus (COVID-19) was first reported in Wuhan, Hubei, China in December 2019, the outbreak was later recognized as a pandemic by the World Health Organization (WHO) on 11 March 2020.
@@ -201,7 +203,7 @@
 
 
     <!-- ------------ services ----------------------- -->
-    <section class="service-part bg-primry">
+    <section class="service-part bg-white">
         <div class="container">
             <div class="title_box">
                 <h2 class="h2 animate__fadeInUp animate__animated animate__slower wow"><span>Covid Hospitals</span> & Health Centres</h2>
@@ -287,12 +289,12 @@
                     </div>
                     <div class="col-sm-4  d-flex justify-content-center counter-guttyr">
                         <div class="death text-center">
-                            <h4 class="h4">CRITICAL</h4>
+                            <h4 class="h4">TO DAY DEATH</h4>
                             <span class="icon">
-                                <i class="fas fa-snowflake fa-pulse"></i>
+                                <i class="fas fa-procedures"></i>
 
                             </span>
-                            <span id="critical"></span>
+                            <span id="todayDeaths"></span>
                         </div>
                     </div>
 
@@ -300,7 +302,7 @@
                         <div class="death text-center">
                             <h4 class="h4">TEST</h4>
                             <span class="icon">
-                                <i class="fas fa-snowflake fa-pulse"></i>
+                                <i class="fas fa-vials"></i>
                                 
                             </span>
                             <span id="tests"></span>
@@ -313,7 +315,7 @@
                         <div class="death text-center">
                             <h4 class="h4">Active</h4>
                             <span class="icon">
-                                <i class="fas fa-snowflake fa-pulse"></i>
+                                <i class="fab fa-creative-commons-sampling"></i>
 
                             </span>
                             <span id="active"></span>
@@ -619,6 +621,115 @@
         </div>
     </section>
 
+    <section class="icu_bad_get">
+        <div class="container">
+            <div class="title_box">
+                <h2 class="h2"><span>Quickly </span>Icu Bad</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-7">
+                    <div class="inner_box_icu">
+                        <img src="assets/image/slider2.jpg" alt="photos">
+                        <p class="para mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, perferendis modi quo quisquam corrupti nulla iste in sequi architecto. Cupiditate corporis enim facilis? Tempore delectus at quas, dicta explicabo vero. architecto.
+                            Cupiditate corporis enim facilis? Tempore delectus at quas, dicta explicabo vero</p>
+                        <a href="service.html" class="btn btn-primariey mb-2">Get icu bad</a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-5 banglades_map" style="background-image: url('assets/image/bangladesh.png');">
+
+                    <div class="text_scroll">
+                        <marquee width="100%" direction="up" height="400px" scrollamount="5">
+                            <p><strong>ICU Hospital Name and Number in Dhaka City</strong></p>
+                            <div dir="auto">1. Evercare Hospital Dhaka 09666710678</div>
+                            <div dir="auto">2.AMZ Hospital Ltd. 10699, 01847331010</div>
+                            <div dir="auto">3. Asgar Ali hospital 09666710602</div>
+                            <div dir="auto">4. রেনেসাঁ হসপিটাল এন্ড রিসার্চ ইনস্টিটিউট লিমিটেড 0171259761</div>
+                            <div dir="auto">5. ICU specialist hospital Limited, 01854560761</div>
+                            <div dir="auto">6. CKD and Urology Hospital, (ICU and NEPHROLOGY), 029127306</div>
+                            <div dir="auto">7. Bangladesh Specialised Hospital, 09666700100</div>
+                            <div dir="auto">8. Dhaka Paediatric Neonatal &amp; General Hospital, 01618225566</div>
+                            <div dir="auto">9. City Hospital &amp; Diagnostic Centre, 028143312</div>
+                            <div dir="auto">10. Samorita Hospital Ltd. 48117618, 48117619, 48115405</div>
+                            <div dir="auto">11. AdDin Women’s Medical College Hospital, 029353391</div>
+                            <div dir="auto">12. Monowara Hospital Private Limited, 01715839400</div>
+                            <div dir="auto">13. Impulse Hospital, 01715016727</div>
+                            <div dir="auto">14. Dhaka community Medical College and Hospital, 029351190</div>
+                            <div dir="auto">15. AlKarim General Hospital Limited, 01926633987</div>
+                            <div dir="auto">16. Baridhara General Hospital, 01768612835</div>
+                            <div dir="auto">17. Care Medical College and Hospital, 01703198859</div>
+                            <div dir="auto">18. Al Helal Specialist hospital Dhaka, 029006820</div>
+                            <div dir="auto">19. Aichi Hospital Limited, 0244891001</div>
+                            <div dir="auto">20. United Hospital Limited, 01914001234</div>
+                            <div dir="auto">21. Dhanmondi General and Kidney Hospital Limited, 029670372</div>
+                            <div dir="auto">22. Insaf Barakha kidney and General Hospital, 01716306631</div>
+                            <div dir="auto">23. Islami Bank Hospital, Motijheel, 029336423</div>
+                            <div dir="auto">24. Popular Medical College Hospital, 09613787800</div>
+                            <div dir="auto">25. ইবনে সিনা স্পেশালাইজড হাসপাতাল, 01823039800</div>
+                            <div dir="auto">26. Rushmono Specialist Hospital, 0249357700</div>
+                            <div dir="auto">27. Islami Bank Hospital Begum Rokeya Sarani, 01992346631</div>
+                            <div dir="auto">28. Central Hospital Limited, 029660015</div>
+                            <div dir="auto">29. Millennium Heart and General Hospital Limited, 029124046</div>
+                            <div dir="auto">30. Al Manar Hospital Limited, 029121588</div>
+                            <div dir="auto">31. Holy Family Red Croscent Medical College Hospital, 0248311721</div>
+                            <div dir="auto">33. BIRDEM General Hospital, 029661551</div>
+                            <div dir="auto">34. LABAID specialist Hospital, 09666 710606</div>
+                            <div dir="auto">35. Square Hospital, 09610010616</div>
+                            <div dir="auto">36. Kingston Hospital, 01952989866</div>
+                            <div dir="auto">37. Comfort Diagnostic Centre Private Limited, 01731956033</div>
+                            <div dir="auto">38. Proshanti Hospital Limited, 028318699</div>
+                            <div dir="auto">39. Japan East West Medical College Hospital, 09611222666</div>
+                            <div dir="auto">40. Khidma Hospital Private Limited, 09606063030</div>
+                            <div dir="auto">41. Farazy Hospital Ltd, 01766111137</div>
+                            <div dir="auto">42. Kurmitola General Hospital, 0255062388</div>
+                            <div dir="auto">43. Japan Bangladesh Friendship Hospital, 029672277</div>
+                            <div dir="auto">44. Nostrum Hospital, 01786355355</div>
+                            <div dir="auto">45. Enam Medical College And Hospital, 01716358146</div>
+                            <div dir="auto">46. Universal Medical College Hospital Limited, 01841480000</div>
+                            <div dir="auto">47. BIRDEM General Hospital 2 (Child And Mother), 0241050710</div>
+                            <div dir="auto">48. Royal care And Surgical Hospital, 01783199990</div>
+                            <div dir="auto">49. Padma General Hospital Ltd., 029661528</div>
+                            <div dir="auto">50. Dhaka Centre International Medical College, 029128727</div>
+                            <div dir="auto">51. Ahsania Mission Cancer And General Hospital, 028931141</div>
+                            <div dir="auto">52. BIHS Hospital, 01783917151</div>
+                            <div dir="auto">53. Uttara Crescent Hospital, 01917704156</div>
+                            <div dir="auto">54. Pancare Hospital Limited, 01844001024</div>
+                            <div dir="auto">55. Memory Medical Centre, 0248314317</div>
+                            <div dir="auto">56. Delta Medical college &amp; Hospital, 029029152</div>
+                            <div dir="auto">57. Delta Hospital Ltd., 029022410</div>
+                            <div dir="auto">58. Islami Bank Centre Hospital, Fakirapul, 029355801</div>
+                            <div dir="auto">59. ধানমন্ডি ক্লিনিক প্রাইভেট লিমিটেড, 01970476626</div>
+                            <div dir="auto">60. Bangabandhu Sheikh Mujib Medical University, 09611677777</div>
+                            <div dir="auto">61. Hitech Multi Care Hospital, 01672241413</div>
+                            <div dir="auto">62. Medical College For Women And Hospital, 028913939</div>
+                            <div dir="auto">63. DR.Azmal Hospital Ltd. 09612304304</div>
+                            <div dir="auto">64. BRB Hospital Limited, 029140333</div>
+                            <div dir="auto">65. MARKS Medical College &amp; Hospital, 028057776</div>
+                            <div dir="auto">66. KC Hospital &amp;Diagnostic Centre, 01777753464</div>
+                            <div dir="auto">67. Metropolitan Medical Centre Ltd., 01718237035</div>
+                            <div dir="auto">68. Green Life Medical College Hospital, 029612345</div>
+                            <div dir="auto">69. Reliance General &amp; Renal Hospital, 01849428888</div>
+                            <div dir="auto">70. Anwar Khan Modern Medical College Hospital, 029670295</div>
+                            <div dir="auto">71. Shin Shin Japan Hospital, 028921429</div>
+                            <div dir="auto">72. Sajida Hospital, 029890513</div>
+                            <div dir="auto">73. HiCare General Hospital Ltd., 0255094231</div>
+                            <div dir="auto">74. Central Police Hospital, 01796500117</div>
+                            <div dir="auto">75. Ashiyan Medical College Hospital, 01841133501</div>
+                            <div dir="auto">76. ProActive Medical College &amp; Hospital Ltd., 01902556070</div>
+                            <div dir="auto">77. Combined Military Hospital (CMH), 8711111 extension 17, 01724579521</div>
+                            <div dir="auto">78. Gonoshasthaya Nagar Hospital, 01716838078</div>
+
+                        </marquee>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
     <!-- quot slider -->
     <section class="quoter">
         <div class="ibg">
@@ -639,9 +750,10 @@
                                     </div>
                                 </div>
                                 <div class="infor">
-                                    <p class="para">Retail solutions bd provides a versatile and shop fitting equipment's, it solutions, retail industry from the smallest corner supermarket stores. our products and a variety of requirements. these shelving and can be
-                                        used in different types of store, pharmacy, clothing</p>
-                                    <h5 class="h5"><a href="#">DR. Asraful Islam</a></h5>
+                                    <p class="para">
+                                        MBBS, FCPS(Medicine) MD, American board certified in internal Medicine & Emergency Medicine chief consultant general intensive care unit (G-ICU) & Emergency
+                                    </p>
+                                    <h5 class="h5"><a href="#">PROF DR. MD OMAR FARUQ</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -848,6 +960,8 @@
             speed: 20
         });
     </script>
+
+
 
     <script>
         var chatbox = document.getElementById('fb-customer-chat');
